fix some spacing in home page

--- a/style.css
+++ b/style.css
@@ -524,7 +524,7 @@ footer .mobile {
   }
 
   .home-content {
-    width: 40%;
+    width: 50%;
   }
 
   .home .intro h1 {
